--- a/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
+++ b/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
@@ -40,8 +40,9 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DockingControls">
-      <HintPath>..\..\Visualizer\Lib\DockingControls.dll</HintPath>
+    <Reference Include="DockingControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\DockingControls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
