--- a/VizualAlgoGeom/ToolboxGeometricElements/ToolboxGeometricElements.csproj
+++ b/VizualAlgoGeom/ToolboxGeometricElements/ToolboxGeometricElements.csproj
@@ -66,11 +66,11 @@
   <ItemGroup>
     <Reference Include="OpenTK, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Visualizer\Lib\OpenTK.dll</HintPath>
+      <HintPath>..\..\lib\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK.Compatibility, Version=1.0.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Visualizer\Lib\OpenTK.Compatibility.dll</HintPath>
+      <HintPath>..\..\lib\OpenTK.Compatibility.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
