--- a/Algorithms/CubicSplineInterpolationAlgorithm/CubicSplineInterpolationAlgorithmAdapter/CubicSplineInterpolationAlgorithmAdapter.csproj
+++ b/Algorithms/CubicSplineInterpolationAlgorithm/CubicSplineInterpolationAlgorithmAdapter/CubicSplineInterpolationAlgorithmAdapter.csproj
@@ -38,9 +38,11 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AlgorithmResources, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
+    </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="GeometricElements">
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
@@ -61,10 +63,6 @@
     <Compile Include="VisualStyles.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\CubicSplineInterpolationAlgorithm\CubicSplineInterpolationAlgorithm.csproj">
       <Project>{B75A019E-A5EC-4F29-84B6-BDB0F473D5D3}</Project>
       <Name>CubicSplineInterpolationAlgorithm</Name>
