--- a/Algorithms/LagrangeInterpolationAlgorithm/LagrangeInterpolationAlgorithmAdapter/LagrangeInterpolationAlgorithmAdapter.csproj
+++ b/Algorithms/LagrangeInterpolationAlgorithm/LagrangeInterpolationAlgorithmAdapter/LagrangeInterpolationAlgorithmAdapter.csproj
@@ -41,6 +41,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
@@ -93,10 +96,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\LagrangeInterpolationAlgorithm\LagrangeInterpolationAlgorithm.csproj">
       <Project>{D2F386F5-6DD6-4A43-AFDD-81A50215B520}</Project>
       <Name>LagrangeInterpolationAlgorithm</Name>
