--- a/Algorithms/PointInConcavPolygonAlgorithm/PointInConcavPolygonAlgorithmAdapter/PointInConcavePolygonAlgorithmAdapter.csproj
+++ b/Algorithms/PointInConcavPolygonAlgorithm/PointInConcavPolygonAlgorithmAdapter/PointInConcavePolygonAlgorithmAdapter.csproj
@@ -36,6 +36,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
@@ -63,10 +66,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\PointInConcavPolygonAlgorithm\PointInConcavePolygonAlgorithm.csproj">
       <Project>{CEB5E64B-63A2-4140-A32C-148B7AC37A6C}</Project>
       <Name>PointInConcavePolygonAlgorithm</Name>
