--- a/Algorithms/PointInConvexPolygonAlgorithm/PointInConvexPolygonAlgorithmAdapter/PointInConvexPolygonAlgorithmAdapter.csproj
+++ b/Algorithms/PointInConvexPolygonAlgorithm/PointInConvexPolygonAlgorithmAdapter/PointInConvexPolygonAlgorithmAdapter.csproj
@@ -36,6 +36,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements">
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
     </Reference>
@@ -57,10 +60,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\PointInConvexPolygonAlgorithm\PointInConvexPolygonAlgorithm.csproj">
       <Project>{6FEC21DF-3E8D-4AFD-90AB-807F166D7101}</Project>
       <Name>PointInConvexPolygonAlgorithm</Name>
