--- a/Algorithms/SegmentIntersectionAlgorithm/SegmentIntersectionAlgorithmAdapter/SegmentIntersectionAlgorithmAdapter.csproj
+++ b/Algorithms/SegmentIntersectionAlgorithm/SegmentIntersectionAlgorithmAdapter/SegmentIntersectionAlgorithmAdapter.csproj
@@ -36,6 +36,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
@@ -58,10 +61,6 @@
     <Compile Include="VisualStyles.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SegmentIntersectionAlgorithm\SegmentIntersectionAlgorithm.csproj">
       <Project>{a8ec558f-33fb-47f3-85af-6f9b588a31f6}</Project>
       <Name>SegmentIntersectionAlgorithm</Name>
