--- a/Algorithms/VoronoiAlgorithm/VoronoiAlgorithmAdapter/VoronoiAlgorithmAdapter.csproj
+++ b/Algorithms/VoronoiAlgorithm/VoronoiAlgorithmAdapter/VoronoiAlgorithmAdapter.csproj
@@ -35,6 +35,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements">
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
     </Reference>
@@ -61,10 +64,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\VoronoiAlgorithm\VoronoiAlgorithm.csproj">
       <Project>{E0B5813C-7041-4EDD-9F87-F08FF237B59A}</Project>
       <Name>VoronoiAlgorithm</Name>
