--- a/Algorithms/deBoorAlgorithm/deBoorAlgorithmAdapter/DeBoorAlgorithmAdapter.csproj
+++ b/Algorithms/deBoorAlgorithm/deBoorAlgorithmAdapter/DeBoorAlgorithmAdapter.csproj
@@ -41,6 +41,9 @@
     <Reference Include="AlgorithmResources">
       <HintPath>..\..\..\Visualizer\AlgorithmResources.dll</HintPath>
     </Reference>
+    <Reference Include="Infrastructure">
+      <HintPath>..\..\..\Visualizer\Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="GeometricElements">
       <HintPath>..\..\..\Visualizer\GeometricElements.dll</HintPath>
     </Reference>
@@ -72,10 +75,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VizualAlgoGeom\Infrastructure\Infrastructure.csproj">
-      <Project>{9de2d9ee-e024-4074-b928-55303247e4ec}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\deBoorAlgorithm\deBoorAlgorithm.csproj">
       <Project>{A272E08D-B113-4AF9-90BC-65601938F7E9}</Project>
       <Name>deBoorAlgorithm</Name>
