--- a/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
+++ b/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
@@ -62,6 +62,9 @@
     <Compile Include="FormWithDockingChildrenStateConfigSection.cs" />
     <Compile Include="FormWithDockingChildrenStatePreserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
