--- a/VizualAlgoGeom/DefaultAuxiliariesImplementation/AlgorithmResources.csproj
+++ b/VizualAlgoGeom/DefaultAuxiliariesImplementation/AlgorithmResources.csproj
@@ -42,6 +42,9 @@
     <Compile Include="DefaultPseudocodeLoader.cs" />
     <Compile Include="DefaultExplanationLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="DefaultPseudocodeLine.cs" />
   </ItemGroup>
   <ItemGroup>
