--- a/VizualAlgoGeom/DrawableWrapperRegistry/DrawableWrapperRegistry.csproj
+++ b/VizualAlgoGeom/DrawableWrapperRegistry/DrawableWrapperRegistry.csproj
@@ -47,6 +47,9 @@
     <Compile Include="DrawableWrapperRegistry.cs" />
     <Compile Include="IDrawableWrapperFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InterfaceOfSnapshotsWithAlgorithmsAndVisualizer\InterfaceOfSnapshotsWithAlgorithmsAndVisualizer.csproj">
