--- a/VizualAlgoGeom/Infrastructure/Infrastructure.csproj
+++ b/VizualAlgoGeom/Infrastructure/Infrastructure.csproj
@@ -40,6 +40,9 @@
     <Compile Include="Color.cs" />
     <Compile Include="Numbers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="XmlIo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
