--- a/VizualAlgoGeom/InterfaceOfAlgorithmAdaptersWithVisualizer/InterfaceOfAlgorithmAdaptersWithVisualizer.csproj
+++ b/VizualAlgoGeom/InterfaceOfAlgorithmAdaptersWithVisualizer/InterfaceOfAlgorithmAdaptersWithVisualizer.csproj
@@ -40,6 +40,9 @@
     <Compile Include="IAlgorithmInput.cs" />
     <Compile Include="IPseudocodeLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Weighted.cs" />
   </ItemGroup>
   <ItemGroup>
