--- a/VizualAlgoGeom/TestProject1/TestProject1.csproj
+++ b/VizualAlgoGeom/TestProject1/TestProject1.csproj
@@ -46,6 +46,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
