--- a/VizualAlgoGeom/ToolboxGeometricElements/ToolboxGeometricElements.csproj
+++ b/VizualAlgoGeom/ToolboxGeometricElements/ToolboxGeometricElements.csproj
@@ -48,6 +48,9 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ClosedPolylineList.cs" />
     <Compile Include="GeometricElement.cs" />
     <Compile Include="Group.cs" />
@@ -59,6 +62,7 @@
     <Compile Include="PointList.cs" />
     <Compile Include="Polyline.cs" />
     <Compile Include="PolylineList.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RayList.cs" />
     <Compile Include="ShowAttribute.cs" />
     <Compile Include="WeightedPoint.cs" />
