--- a/VizualAlgoGeom/VizualAlgoGeom/VizualAlgoGeom.csproj
+++ b/VizualAlgoGeom/VizualAlgoGeom/VizualAlgoGeom.csproj
@@ -145,6 +145,9 @@
     <Compile Include="PointFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\VersionAssemblyInfo.cs">
+      <Link>Properties\VersionAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="PropertiesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
