--- a/VizualAlgoGeom/VizualAlgoGeom/app.config
+++ b/VizualAlgoGeom/VizualAlgoGeom/app.config
@@ -1,23 +1,18 @@
-<?xml version="1.0"?>
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="mainForm"
-             type="VizualAlgoGeom.Config.FormWithDockingChildrenStateConfigSection, VizualAlgoGeom.Config"
-             allowExeDefinition="MachineToLocalUser" />
-    <section name="common" type="VizualAlgoGeom.Config.CommonConfigSection, VizualAlgoGeom.Config"
-             allowExeDefinition="MachineToLocalUser" />
+    <section name="mainForm" type="VizualAlgoGeom.Config.FormWithDockingChildrenStateConfigSection, VizualAlgoGeom.Config" allowExeDefinition="MachineToLocalUser" />
+    <section name="common" type="VizualAlgoGeom.Config.CommonConfigSection, VizualAlgoGeom.Config" allowExeDefinition="MachineToLocalUser" />
   </configSections>
   <startup>
 
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <mainForm width="1000" height="700" pixelsFromLeft="193" pixelsFromTop="134" windowState="Normal">
     <dockingControls>
       <add id="algorithm" dockDimension="483" dockIndex="0" dockingType="Bottom" autoHide="false" cancelled="false" />
       <add id="options" dockDimension="200" dockIndex="0" dockingType="Left" autoHide="true" cancelled="false" />
-      <add id="dataStructures" dockDimension="452" dockIndex="1" dockingType="Bottom" autoHide="false"
-           cancelled="false" />
+      <add id="dataStructures" dockDimension="452" dockIndex="1" dockingType="Bottom" autoHide="false" cancelled="false" />
       <add id="remarks" dockDimension="284" dockIndex="0" dockingType="Right" autoHide="true" cancelled="false" />
       <add id="explanations" dockDimension="200" dockIndex="1" dockingType="Right" autoHide="true" cancelled="false" />
       <add id="properties" dockDimension="373" dockIndex="1" dockingType="Left" autoHide="false" cancelled="false" />
@@ -26,4 +21,12 @@
   </mainForm>
   <common>
   </common>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
