--- a/VizualAlgoGeom/VizualAlgoGeom/packages.config
+++ b/VizualAlgoGeom/VizualAlgoGeom/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="NLog" version="4.4.11" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.11" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.11" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
