--- a/VizualAlgoGeom/VizualAlgoGeom/app.config
+++ b/VizualAlgoGeom/VizualAlgoGeom/app.config
@@ -4,8 +4,10 @@
     <section name="mainForm" type="VizualAlgoGeom.Config.FormWithDockingChildrenStateConfigSection, VizualAlgoGeom.Config" allowExeDefinition="MachineToLocalUser" />
     <section name="common" type="VizualAlgoGeom.Config.CommonConfigSection, VizualAlgoGeom.Config" allowExeDefinition="MachineToLocalUser" />
   </configSections>
+  <appSettings>
+    <add key="issueTrackerUrl" value="https://github.com/calin-darie/VizualAlgoGeom/issues"/>
+  </appSettings>
   <startup>
-
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <mainForm width="1000" height="700" pixelsFromLeft="193" pixelsFromTop="134" windowState="Normal">
