--- a/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
+++ b/VizualAlgoGeom/Config/VizualAlgoGeom.Config.csproj
@@ -65,6 +65,7 @@
     <Compile Include="..\VersionAssemblyInfo.cs">
       <Link>Properties\VersionAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
