preparing for unhandled thread & app domain exceptions

--- a/VizualAlgoGeom/VizualAlgoGeom/NLog.config
+++ b/VizualAlgoGeom/VizualAlgoGeom/NLog.config
@@ -27,7 +27,7 @@
     Write events to a file with the date in the filename.
     
     -->
-    <target xsi:type="File" name="fileLog" fileName="${specialfolder:folder=ApplicationData}/VizualAlgoGeom/logs/${shortdate}.log"
+    <target xsi:type="File" name="fileLog" fileName="${specialfolder:folder=ApplicationData}/VizualAlgoGeom/data/logs/${shortdate}.log"
          layout="${longdate} ${uppercase:${level}} ${message}  ${exception:format=tostring}" />
     <target xsi:type="Console" name="consoleLog" 
          layout="${longdate} ${uppercase:${level}} ${message}  ${exception:format=tostring}" />
